# poolang

./: .gitignore  .goreleaser.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  app.poo  artifacts.json  dist-workspace.toml  index.html  install.sh  oranda.json  poo-installer.ps1.txt  poo-installer.sh.txt
.github/workflows/: ci.yml  release.yml  web.yml
artifacts/: index.html
book/: 404.html  functions.html  print.html  searchindex.js  std.html
book/control_flow/: conditionals.html  loops.html
book/internals/: parser.html
book/syntax/: comments.html  operators.html
docs/: book.toml
docs/book/: 404.html  chapter_1.html  getting_started.html  introduction.html  print.html  searchindex.json
docs/book/internals/: interpreter.html  lexer.html
docs/book/syntax/: variables.html
docs/src/: SUMMARY.md  functions.md  getting_started.md  introduction.md  std.md
docs/src/control_flow/: conditionals.md  loops.md
docs/src/internals/: interpreter.md  lexer.md  parser.md
docs/src/syntax/: operators.md  variables.md
examples/: app.poo  donut.poo
src/: ast.rs  compiler.rs  donut.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  parser2.rs  type_inference.rs  visitor.rs
tests/: language_specs.rs
wix/: main.wxs
