[workspace]
members = ["."]

[package]
name = "poo"
version = "0.1.4-beta.12"
edition = "2024"
authors = ["Shayy <aungminkhant.shay@gmail.com>"]
description = "Tiny interpreted language written in Rust"
repository = "https://github.com/shayyz-code/poolang"
homepage = "https://github.com/shayyz-code/poolang"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "C3C2DD2F-C1BE-458A-AE1D-0F6E8EC91587"
path-guid = "0CAAE148-B181-4C04-AA04-B72B6B6DF2CF"
license = false
eula = false

[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[dependencies]
