[package]
name = "poo"
version = "0.1.4-beta.15"
edition = "2024"
authors = ["Shayy <aungminkhant.shay@gmail.com>"]
description = "Tiny interpreted language written in Rust"
repository = "https://github.com/shayyz-code/poolang"
homepage = "https://github.com/shayyz-code/poolang"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "9019CB96-3E79-4E19-B28F-4213BEE3FD2E"
path-guid = "3822313C-D94C-44A2-B2BD-BF4F64D5ACC9"
license = false
eula = false

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
