[package]
name = "poo"
version = "0.1.4-beta.18"
edition = "2024"
authors = ["Shayy <aungminkhant.shay@gmail.com>"]
description = "Tiny interpreted language written in Rust"
repository = "https://github.com/shayyz-code/poolang"
homepage = "https://github.com/shayyz-code/poolang"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "E5BAFDF3-D829-4C38-B58D-49491C5C6445"
path-guid = "B8D61EE3-90EE-43B8-991B-C6285CC61AA8"
license = false
eula = false

[dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
